// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
<div
  className="Dropdown__TabTransparentDropdown-rmc6yw-3 edlcTM Dropdown-rmc6yw-5 fBPFfC DotMenu__DotMenuDropdown-khcauc-3 hDFPiE"
>
  <div
    className="Dropdown__DropdownFocusWrapper-rmc6yw-2 ldfjZL"
  >
    <button
      className="Button__PlainButton-ayg7nk-2 chgswm DotMenu__DotMenuToggle-khcauc-1 fyJNFy Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-bdy9j4 cCvWXa DotMenu__DotMenuIcon-khcauc-0 ehMhqa"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <ol
      className="Dropdown__DropdownList-rmc6yw-4 DotMenu__DotMenuDropdownList-khcauc-2 fHGnJd"
    >
      <li>
        <a
          href=""
          onClick={[Function]}
          tabIndex={0}
        >
          Delete
        </a>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </ol>
  </div>
  <button
    className="Button__PlainButton-ayg7nk-2 chgswm DotMenu__DotMenuToggle-khcauc-1 fyJNFy Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 cCvWXa DotMenu__DotMenuIcon-khcauc-0 ehMhqa"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Dropdown matches snapshot on right align 1`] = `
<div
  className="Dropdown__TabTransparentDropdown-rmc6yw-3 edlcTM Dropdown-rmc6yw-5 fBPFfC DotMenu__DotMenuDropdown-khcauc-3 hDFPiE"
>
  <div
    className="Dropdown__DropdownFocusWrapper-rmc6yw-2 ldfjZL"
  >
    <button
      className="Button__PlainButton-ayg7nk-2 chgswm DotMenu__DotMenuToggle-khcauc-1 fyJNFy Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-bdy9j4 cCvWXa DotMenu__DotMenuIcon-khcauc-0 ehMhqa"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <ol
      className="Dropdown__DropdownList-rmc6yw-4 DotMenu__DotMenuDropdownList-khcauc-2 jNSZKe"
    >
      <li>
        <a
          href=""
          onClick={[Function]}
          tabIndex={0}
        >
          Delete
        </a>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </ol>
  </div>
  <button
    className="Button__PlainButton-ayg7nk-2 chgswm DotMenu__DotMenuToggle-khcauc-1 fyJNFy Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 cCvWXa DotMenu__DotMenuIcon-khcauc-0 ehMhqa"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;
